Append function excludes Collections that do not contain Objects directly #92347

Closed
opened 2021-10-19 17:26:50 +02:00 by Sven Stein · 6 comments

System Information
Operating system: Windows-10-10.0.22478-SP0 64 Bits
Graphics card: AMD Radeon(TM) RX Vega 11 Graphics ATI Technologies Inc. 4.5.14761 Core Profile Context 21.30.19.01 30.0.13019.1006

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-18 21:38, hash: d7b231baa8
Worked: 2.93.5
Caused by 3be5ce4aad

Short description of error
In Blender, when you append from an existing .blend file, it will not append all collections and thus destroy the structure of the collections with sub-collections.
Collections which only contain other collections but no Objects themselves will not be appended.

Screenshot 2021-10-19 171859.png
Before appending

Screenshot 2021-10-19 171938.png
Appending the parent collection

Screenshot 2021-10-19 172016.png
After appending. Collections have been skipped. The former structure has been destroyed.

Exact steps for others to reproduce the error

  1. Create a .blend file with multiple collections, some contain objects, others just contain sub-collections or use this .blend file: collection with sub-collections.blend
  2. Close your project, open a new project and try to append the .blend file with the collections inside to your new project.
  3. You will notice, that only the Collections with Objects inside are kept. Other collections which only act as parent collections but don't contain Objects will be excluded. The Collection structure is not the same as before anymore.
**System Information** Operating system: Windows-10-10.0.22478-SP0 64 Bits Graphics card: AMD Radeon(TM) RX Vega 11 Graphics ATI Technologies Inc. 4.5.14761 Core Profile Context 21.30.19.01 30.0.13019.1006 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-18 21:38, hash: `d7b231baa8` Worked: 2.93.5 Caused by 3be5ce4aad **Short description of error** In Blender, when you append from an existing .blend file, it will not append all collections and thus destroy the structure of the collections with sub-collections. Collections which only contain other collections but no Objects themselves will not be appended. ![Screenshot 2021-10-19 171859.png](https://archive.blender.org/developer/F11287441/Screenshot_2021-10-19_171859.png) Before appending ![Screenshot 2021-10-19 171938.png](https://archive.blender.org/developer/F11287448/Screenshot_2021-10-19_171938.png) Appending the parent collection ![Screenshot 2021-10-19 172016.png](https://archive.blender.org/developer/F11287457/Screenshot_2021-10-19_172016.png) After appending. Collections have been skipped. The former structure has been destroyed. **Exact steps for others to reproduce the error** 1. Create a .blend file with multiple collections, some contain objects, others just contain sub-collections or use this .blend file: [collection with sub-collections.blend](https://archive.blender.org/developer/F11287309/collection_with_sub-collections.blend) 2. Close your project, open a new project and try to append the .blend file with the collections inside to your new project. 3. You will notice, that only the Collections with Objects inside are kept. Other collections which only act as parent collections but don't contain Objects will be excluded. The Collection structure is not the same as before anymore.
Author

Added subscriber: @HADESBLACK

Added subscriber: @HADESBLACK
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, caused by 3be5ce4aad.

Reading comments this might actually be intended in that commit, but it certainly breaks the workflow described here.

@mont29: can this be restored?

Can confirm, caused by 3be5ce4aad. Reading comments this might actually be intended in that commit, but it certainly breaks the workflow described here. @mont29: can this be restored?

This issue was referenced by 2d46cef2e8

This issue was referenced by 2d46cef2e88730f40d8927a10102fa9e2a2d4ea3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-10-20 15:31:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92347
No description provided.