Fix T92347: Append function excludes Collections that do not contain Objects directly.

Collections directly selected by the user should always be
instantiated.

Regression from recent append code refactor.